--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 
   flutter_svg: ^1.1.6
   cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.3
   
   stacked: ^3.2.0
   stacked_services: ^1.0.0
