--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.6
   cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.3
+  google_fonts: ^5.0.0
   casa_vertical_stepper: ^0.0.5
+  dio: ^4.0.6
+  pretty_dio_logger: ^1.1.1
+  sembast: ^3.4.3+1
+  path_provider: ^2.0.14
   
   stacked: ^3.2.0
   stacked_services: ^1.0.0
@@ -47,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   build_runner: ^2.2.0
 
   stacked_generator: ^1.0.0
