--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   pretty_dio_logger: ^1.1.1
   sembast: ^3.4.3+1
   path_provider: ^2.0.14
+  jwt_decoder: ^2.0.1
+  webview_flutter: ^4.2.0
   
   stacked: ^3.2.0
   stacked_services: ^1.0.0
