--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider: ^2.0.14
   jwt_decoder: ^2.0.1
   webview_flutter: ^4.2.0
+  image_picker: ^0.8.7+5
+  flutter_image_compress: ^2.0.3
   
   stacked: ^3.2.0
   stacked_services: ^1.0.0
