--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   webview_flutter: ^4.2.0
   image_picker: ^0.8.7+5
+  intl: ^0.18.0
   flutter_image_compress: ^2.0.3
   
   stacked: ^3.2.0
