--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,13 @@ dev_dependencies:
   stacked_generator: ^1.0.0
   mockito: ^5.3.2
   change_app_package_name: ^1.1.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/afriprize.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
