--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,8 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/afriprize.png"
+  remove_alpha_ios: true
+  image_path: "assets/images/icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
