--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^2.0.6
+
+
+  flutter_svg: any
   cupertino_icons: ^1.0.2
-  google_fonts: ^5.0.0
+  google_fonts: any
   casa_vertical_stepper: ^0.0.5
   dio: ^4.0.6
   pretty_dio_logger: ^1.1.1
@@ -43,11 +45,13 @@ dependencies:
   image_picker: ^0.8.7+5
   intl: ^0.18.0
   flutter_image_compress: ^2.0.3
-  lottie: ^2.4.0
+  lottie: any
   stacked: ^3.2.0
   stacked_services: ^1.0.0
   awesome_rating: ^0.0.4
   palette_generator: ^0.3.3+2
+  fluttertoast: ^8.0.8
+  font_awesome_flutter: any
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +82,19 @@ flutter_launcher_icons:
 
 # The following section is specific to Flutter.
 flutter:
+  fonts:
+    - family: Panchang
+      fonts:
+        - asset: assets/fonts/Panchang-Bold.ttf
+        - asset: assets/fonts/Panchang-Extrabold.ttf
+        - asset: assets/fonts/Panchang-Extralight.ttf
+        - asset: assets/fonts/Panchang-Light.ttf
+        - asset: assets/fonts/Panchang-Medium.ttf
+        - asset: assets/fonts/Panchang-Regular.ttf
+        - asset: assets/fonts/Panchang-Semibold.ttf
+        - asset: assets/fonts/Panchang-Variable.ttf
+          style: italic
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
