--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   dio: ^4.0.6
   pretty_dio_logger: ^1.1.1
   sembast: ^3.4.3+1
+  flutter_modular: ^5.0.3
+  intl_phone_number_input: any
+  intl_phone_field: ^3.0.0
   path_provider: ^2.0.14
   jwt_decoder: ^2.0.1
   webview_flutter: ^4.2.0
