--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,16 +45,23 @@ dependencies:
   path_provider: ^2.0.14
   jwt_decoder: ^2.0.1
   webview_flutter: ^4.2.0
+  video_player: ^2.2.14
   image_picker: ^0.8.7+5
-  intl: ^0.18.0
+  intl: ^0.17.0
   flutter_image_compress: ^2.0.3
   lottie: any
   stacked: ^3.2.0
   stacked_services: ^1.0.0
   awesome_rating: ^0.0.4
+  toggle_switch: ^2.1.0
   palette_generator: ^0.3.3+2
+  pdf: ^3.6.0
+  printing: ^5.6.0
   fluttertoast: ^8.0.8
   font_awesome_flutter: any
+  flutter_paystack: ^1.0.7
+  shared_preferences: ^2.2.2
+
 
 dev_dependencies:
   flutter_test:
@@ -108,6 +115,7 @@ flutter:
   assets:
     - assets/images/
     - assets/animations/
+    - assets/videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
