--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+3
+version: 1.0.4+4
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -47,6 +47,7 @@ dependencies:
   webview_flutter: ^4.2.0
   video_player: ^2.2.14
   image_picker: ^0.8.7+5
+  url_launcher: ^6.1.13
   intl: ^0.17.0
   flutter_image_compress: ^2.0.3
   lottie: any
