--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 #version: 2.0.0
-version: 1.2.0+3
+version: 1.2.0+4
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -52,7 +52,7 @@ dependencies:
   image_picker: ^0.8.7+5
   url_launcher: ^6.1.13
   flutter_rating_bar: ^4.0.1
-  http: ^0.13.3
+  http: ^1.1.0
   intl: ^0.17.0
   flutter_image_compress: ^2.0.3
   lottie: any
@@ -67,11 +67,13 @@ dependencies:
   fluttertoast: ^8.0.8
   font_awesome_flutter: any
   path_provider: ^2.1.1
-  flutter_paystack: ^1.0.7
+#  flutter_paystack: ^1.0.7
+  flutterwave_standard: ^1.0.8
   shared_preferences: ^2.2.2
   flutter_countdown_timer: ^4.1.0
   slidable_button: ^3.0.0+1
   cached_network_image: ^3.3.1
+  marquee: ^2.2.3
 
 
 dev_dependencies:
