--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+    <string>com.binance.app.binance</string>
+    <string>com.binance.pay.support</string>
+    </array>
 </dict>
 </plist>
