--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 #version: 2.0.0
-version: 1.2.0+4
+version: 1.2.0+12
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -30,8 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
 
   flutter_svg: any
   cupertino_icons: ^1.0.2
@@ -74,6 +72,7 @@ dependencies:
   slidable_button: ^3.0.0+1
   cached_network_image: ^3.3.1
   marquee: ^2.2.3
+#  background_fetch: '^1.1.3'
 
 
 dev_dependencies:
