--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 #version: 2.0.0
-version: 1.2.0+12
+version: 1.3.0+11
+
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -72,6 +73,13 @@ dependencies:
   slidable_button: ^3.0.0+1
   cached_network_image: ^3.3.1
   marquee: ^2.2.3
+  firebase_core: ^2.24.2
+  update_available: ^3.0.0
+  firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^16.3.2
+  rxdart: ^0.27.7
+  firebase_in_app_messaging: ^0.7.4+8
+  firebase_analytics: ^10.8.0
 #  background_fetch: '^1.1.3'
 
 
