--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,7 @@
 	<array>
 		<string>com.binance.app.binance</string>
 		<string>com.binance.pay.support</string>
+		<string>com.binance.dev</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
