--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   rxdart: ^0.27.7
   firebase_in_app_messaging: ^0.7.4+8
   firebase_analytics: ^10.8.0
+  dotted_border: ^2.1.0
 #  background_fetch: '^1.1.3'
 
 
