--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 #version: 2.0.0
-version: 2.0.0+15
-
+version: 3.1.0+20
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -52,7 +51,7 @@ dependencies:
   url_launcher: ^6.1.13
   flutter_rating_bar: ^4.0.1
   http: ^1.1.0
-  intl: ^0.17.0
+#  intl: ^0.17.0
   flutter_image_compress: ^2.0.3
   lottie: any
   stacked: ^3.2.0
@@ -81,6 +80,8 @@ dependencies:
   firebase_in_app_messaging: ^0.7.4+8
   firebase_analytics: ^10.8.0
   dotted_border: ^2.1.0
+  workmanager: ^0.5.2
+  pay: ^2.0.0
 #  background_fetch: '^1.1.3'
 
 
