--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,8 @@ dependencies:
   pay: ^2.0.0
   pin_code_fields: ^8.0.1
   top_modal_sheet: ^2.1.0
+  item_count_number_button: ^1.0.0
+
 
 
 dev_dependencies:
