--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dependencies:
   font_awesome_flutter: any
   path_provider: ^2.1.1
   #  flutter_paystack: ^1.0.7
-  flutterwave_standard: ^1.0.8
+  #  flutterwave_standard: ^1.0.8
   shared_preferences: ^2.2.2
   flutter_countdown_timer: ^4.1.0
   slidable_button: ^3.0.0+1
@@ -76,7 +76,7 @@ dependencies:
   firebase_core: ^2.24.2
   update_available: ^3.0.0
   firebase_messaging: ^14.7.10
-  flutter_local_notifications: ^16.3.2
+  flutter_local_notifications: ^16.3.3
   rxdart: ^0.27.7
   firebase_in_app_messaging: ^0.7.4+8
   firebase_analytics: ^10.8.0
