--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
   image_picker: ^0.8.7+5
   url_launcher: ^6.1.13
   flutter_rating_bar: ^4.0.1
-  http: ^1.1.0
 #  intl: ^0.17.0
   flutter_image_compress: ^2.0.3
   lottie: any
@@ -83,9 +82,17 @@ dependencies:
   workmanager: ^0.5.2
   pay: ^2.0.0
   showcaseview: ^3.0.0
+#  flutter_paystack: ^1.0.7
+  flutter_paystack:
+    path: lib/app/flutter_paystack
+
 
 
 #  background_fetch: '^1.1.3'
+
+dependency_overrides:
+  http: ^0.13.5
+  intl: ^0.18.1
 
 
 dev_dependencies:
