--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: growsmart
+name: easy_power
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -86,6 +86,9 @@ dependencies:
   pin_code_fields: ^8.0.1
   top_modal_sheet: ^2.1.0
   item_count_number_button: ^1.0.0
+  animated_segmented_tab_control: ^2.0.0
+
+
 
 
 
