--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "growsmart",
-    "short_name": "growsmart",
+    "name": "easy_power",
+    "short_name": "easy_power",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
