--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 #version: 2.0.0
-version: 3.1.0+20
+version: 4.0.0+8
 
 environment:
   sdk: ">=2.19.0 <3.0.0"
@@ -33,7 +33,6 @@ dependencies:
 
   flutter_svg: any
   cupertino_icons: ^1.0.2
-  google_fonts: any
   casa_vertical_stepper: ^0.0.5
   dio: ^4.0.6
   pretty_dio_logger: ^1.1.1
@@ -82,6 +81,11 @@ dependencies:
   workmanager: ^0.5.2
   pay: ^2.0.0
   showcaseview: ^3.0.0
+  shimmer: ^3.0.0
+  top_bottom_sheet_flutter: ^0.0.2
+  google_fonts: ^6.2.1
+  carousel_slider: ^5.0.0
+  slide_countdown: ^1.1.0
 #  flutter_paystack: ^1.0.7
   flutter_paystack:
     path: lib/app/flutter_paystack
