--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
   carousel_slider: ^5.0.0
   slide_countdown: ^1.1.0
   pin_code_fields: ^8.0.1
+  animated_segmented_tab_control: ^2.0.0
 #  flutter_paystack: ^1.0.7
 #  flutter_paystack:
 #    path: lib/app/flutter_paystack
