--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -122,7 +122,7 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/icon.png"
+  image_path: "assets/images/easy_ph_logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
