--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,7 +88,7 @@ dependencies:
   slide_countdown: ^1.1.0
   pin_code_fields: ^8.0.1
   animated_segmented_tab_control: ^2.0.0
-#  flutter_paystack: ^1.0.7
+  flutter_paystack: ^1.0.7
 #  flutter_paystack:
 #    path: lib/app/flutter_paystack
 
