--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,8 +89,8 @@ dependencies:
   pin_code_fields: ^8.0.1
   animated_segmented_tab_control: ^2.0.0
   flutter_paystack: ^1.0.7
-#  flutter_paystack:
-#    path: lib/app/flutter_paystack
+  flutter_staggered_grid_view: ^0.7.0
+
 
 
 
